--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node": "5.4.x",
-    "npm": "3.5.x"
+    "node": "5.4.x"
   },
   "author": "",
   "license": "ISC",
